Fixed git issue and styling for error message as well as margins on mobile view

--- a/src/scss/partials/_selects.scss
+++ b/src/scss/partials/_selects.scss
@@ -1,6 +1,6 @@
 .userSelect {
     height: 30px;
-    margin: 10px 0 10px 0;
+    margin: 15px 5px;
 }
 
 #countrySelect {
@@ -9,4 +9,10 @@
 
 #competitionSelect {
     grid-area: competitionSelect;
+}
+
+@include single-column-layout {
+    #competitionSelect {
+        margin-top: 20px;
+    }
 }
