--- a/src/scss/partials/_table.scss
+++ b/src/scss/partials/_table.scss
@@ -1,21 +1,25 @@
-#scoreboardTable{ 
+#scoreboardTable {
     width: 100%;
     background-color: $secondary-color;
     text-align: center;
     margin: 20px 0 30px 0;
-    .teamName{
+
+    .teamName {
         text-align: left;
     }
-    th{
+
+    th {
         @extend %table-padding;
         font-size: 13pt;
         font-weight: 600;
     }
-    td{
+
+    td {
         @extend %table-padding;
         padding: 15px;
     }
-    img{
+
+    img {
         height: 50px;
         width: 50px;
         margin-right: 15px;
@@ -23,6 +27,12 @@
     }
 }
 
-.tableMobile{
+.tableMobile {
     margin-right: 50px;
+}
+
+@include single-column-layout {
+    #scoreboardTable {
+        margin-top: 35px;
+    }
 }
